Fix banner wrapping

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -1216,7 +1216,7 @@ table > tbody > tr.tableSubHeading {
     font-weight: normal;
 }
 
-@media (max-width:768px) {
+@media (max-width:700px) {
     .navbar-brand {
         width:70vw!important;
     }
